# django-ninjutsu

./: .gitignore  LICENSE  README.md  pyproject.toml
ninjutsu/: __init__.py  core.py  filters.py
tests/: test_views.py
tests/demo-project/app/: api.py  filters.py  models.py  schemas.py
tests/demo-project/app/migrations/: 0001_initial.py
tests/demo-project/project/: settings.py  urls.py
