[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ninjutsu"
dist_name = "django-ninjutsu"
authors = [{name = "Igor Prochazka", email = "projazzka@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/projazzka"

[tool.pytest.ini_options]
pythonpath = [".", "./tests/demo-project"]
DJANGO_SETTINGS_MODULE = "project.settings"
#addopts = "--usefixtures=transactional_db"

[tool.mypy]
packages = ["ninjutsu",]
plugins = ["mypy_django_plugin.main",]
mypy_path = [".", "./tests/demo-project"]

[tool.django-stubs]
django_settings_module = "project.settings"

